tests/ui/feature-gates/feature-gate-avx10_target_feature.stderr
error[E0658]: the target feature `avx10.1` is currently unstable
  --> $DIR/feature-gate-avx10_target_feature.rs:2:18
   |
LL | #[target_feature(enable = "avx10.1")]
   |                  ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #138843 <https://github.com/rust-lang/rust/issues/138843> for more information
   = help: add `#![feature(avx10_target_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
